--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="5086wjjaDbtiuTfP1zKU5CsNqCIKGWRjazEV5LnTmOk" />
     <meta charset="UTF-8">
 
     <link rel="stylesheet" href="css/bootstrap.css">
