--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                             <p>Phone: +989368382807</p>
                         </div>
                         <div class="float-end">
-                            <p>Crafted  <span class="text-danger"></span> by <a
-                                    href="http://RezaMasoomi.com">Reza Masoomi</a></p>
+                            <p>View  <span class="text-danger"></span> on <a
+                                    href="https://github.com/rezamasoomi/optional_bootstrap_tree_view">Github</a></p>
                         </div>
                     </div>
                 </footer>
